# ICS0019

./: .gitignore  README.md
Homework 1/: link_to_package.txt
Homework 1/package_usage/: GUI.py
Homework 1/square_of_sum_package/: pyproject.toml
Homework 1/square_of_sum_package/src/square_anviks/: calculator.py
Homework 1/square_of_sum_package/tests/: test_calculator.py
Homework 2/: diners_alchemy.db  diners_alchemy.py  diners_plain.db  diners_plain.py
Homework 3/: flights.py  flights20.csv  flights23.csv  otselennud20.csv  otselennud23.csv
Homework 4/: README.md
Homework 4/brickset_scrapy/: results.json  run_brickset_spider.py  scrapy.cfg
Homework 4/brickset_scrapy/brickset_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
Homework 4/brickset_scrapy/brickset_scrapy/spiders/: brickset_spider.py
Homework 4/brickset_soup/: results.json  soup.py
Homework 4/ebay_scrapy/: results.json  run_ebay_spider.py
Homework 4/ebay_scrapy/ebay_scrapy/: middlewares.py  settings.py
Homework 4/ebay_scrapy/ebay_scrapy/spiders/: ebay_spider.py
