[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "square_anviks"
version = "0.0.2"
authors = [
    { name = "Andreas Marten Viks", email = "author@example.com" },
]
description = "This package calculates the square of a sum of two numbers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CClairvoyant"
"Bug Tracker" = "https://github.com/CClairvoyant"